--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "display": "Default",
   "compilerOptions": {
+    "outDir": "./dist",
     "composite": false,
     "declaration": true,
     "declarationMap": true,
@@ -17,9 +18,6 @@
     "strict": true
   },
   "exclude": ["node_modules"],
-  "compilerOptions": {
-    "outDir": "./dist"
-  },
   "include": [
     "grafbase/*",
     "src/**/*",
